--- a/style.css
+++ b/style.css
@@ -80,7 +80,18 @@ p{
     border: 1px solid white;
     padding: 40px;
     color: white;
-    font-size: 20px;
-    padding-bottom: 5px;
+    font-size: 1rem;
+    padding-bottom: 10px;
     padding-block: 10px;
+    margin : 20px;
+}
+
+.value:hover{
+    background-color: #fff;
+    color: #000;
+}
+
+.free{
+    margin-bottom: 51px;
+    margin-top: 51px;
 }
